tests/rosetta/transpiler/FS/accumulator-factory.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/accumulator-factory.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Accumulator-factory' based on the file name 'accumulator-factory.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/accumulator-factory.fs(14,44): error FS0001: The type 'obj' does not support the operator '+'

/workspace/mochi/tests/rosetta/transpiler/FS/accumulator-factory.fs(15,26): error FS0001: This expression was expected to have type
    unit    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/accumulator-factory.fs(29,9): error FS0003: This value is not a function and cannot be applied

/workspace/mochi/tests/rosetta/transpiler/FS/accumulator-factory.fs(30,9): warning FS0020: This expression should have type 'unit', but has type 'obj'. Use 'ignore' to discard the result of the expression, or 'let' to bind the result to a name.

/workspace/mochi/tests/rosetta/transpiler/FS/accumulator-factory.fs(31,31): error FS0003: This value is not a function and cannot be applied

/workspace/mochi/tests/rosetta/transpiler/FS/accumulator-factory.fs(35,1): warning FS0020: This expression should have type 'unit', but has type 'obj'. Use 'ignore' to discard the result of the expression, or 'let' to bind the result to a name.
